tenkai_next/styles/styles.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400;1,700&display=swap');

html, body, #__next  {
    margin: 0;
    padding: 0;
    min-height: 100vh;
    width: 100%;
}


*:focus {
    outline: 0 !important;
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none; 
}

::-webkit-scrollbar {
    width: 1rem;
}

::-webkit-scrollbar-thumb {
    background-color: gray;
    border-radius: 100vw;
}

